--- a/6dejaar/kinematica/knmtc_bgrppn_intro.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_intro.tex
@@ -4,15 +4,17 @@
 \addPrintStyle{..}
 
 \begin{document}
-	\author{Bart Lambregs}
+	\author{Bart Lambregs, Vincent Gellens}
 	\xmtitle{Inleiding kinematica}{}
     \xmsource\xmuitleg
 
-\textbf{Kinematica} is het belangrijke onderdeel van de fysica dat de \textbf{bewegingen van voorwerpen beschrijft}. 
+\textbf{Kinematica} (afkomstig van het Griekse woord $\kappa \iota \nu \epsilon \mu \alpha$ ) is het belangrijke onderdeel van de fysica dat de \textbf{bewegingen van voorwerpen beschrijft} zonder zich af te vragen wat de oorzaak ervan is. 
 Dat gaat bijvoorbeeld over vallende appels, rollende knikkers of rijdende auto's, maar ook over de beweging van de maan rond de aarde, de aarde rond de zon, moleculen in water of ook in elkaar grijpende tandwieltjes in een mechanisch uurwerk. 
 
 
-Dit hoofdstuk bestudeert de \textbf{basisbegrippen} van de kinematica, en spreekt dus over rechtlijnige en cirkelvormige bewegingen, snelle en trage bewegingen, versnellende en vertragende bewegingen enzovoort. Het houdt zich echter (nog) niet bezig met de \textit{oorzaken} van die bewegingen zoals aandrijfmotoren, zwaartekracht of opgebouwde spanningen in de aardkorst.
+Dit hoofdstuk bestudeert de \textbf{basisbegrippen} en \textbf{basisgrootheden}  van de kinematica om in een volgende fase enkele concrete basisbewegingen (rechtlijnige, cirkelvormige, snelle, trage, versnellende en vertragende, enzovoort) te beschrijven.
+
+Kwantitatief behandelt kinematica steeds de vectoriële grootheden \textbf{positie}, \textbf{snelheid} en \textbf{versnelling}, hun verbanden onderling en hun afhankelijk met de scalaire grootheid \textbf{tijd}.
 
 \begin{example}
 Als een appel van een boom valt, kan je allerlei vragen stellen over deze valbeweging: 
@@ -25,7 +27,7 @@ Als een appel van een boom valt, kan je allerlei vragen stellen over deze valbew
 \end{itemize}
 
 We bekommeren ons voorlopig nog niet over de vraag \textit{waarom} een appel naar beneden valt, en bijvoorbeeld niet naar boven.
-Dat komt later, in het onderdeel \textit{dynamica}, waar we de \textit{krachten} zullen bestuderen die de bewegingen veroorzaken. Wel, we zullen zien dat krachten eigenlijk alleen maar de \textit{veranderingen van bewegingen} veroorzaken.
+Dat komt later, in het onderdeel \textit{dynamica}, waar we de \textit{krachten} zullen bestuderen die de bewegingen beïnvloeden. Wel, we zullen zien dat krachten eigenlijk alleen maar de \textit{veranderingen van bewegingen} veroorzaken.
 
 \end{example}
 
