--- a/6dejaar/kinematica/knmtc_bgrppn_positie.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_positie.tex
@@ -5,6 +5,10 @@
 
 \begin{document}
 	\author{Bart Lambregs}
+
+	\begin{image}
+	\includegraphics[width=0.45\textwidth]{testimage}
+\end{image}
 	\xmtitle{De positie}{}
     \xmsource\xmuitleg
 
