branche met drie wetten in

--- a/6dejaar/dynamica/nwtn_derde_beginsel.tex
+++ b/6dejaar/dynamica/nwtn_derde_beginsel.tex
@@ -10,9 +10,8 @@
 
 Krachten komen niet uit het niets, ze worden altijd door een ander voorwerp uitgeoefend. Zo is het de hamer die de spijker in de muur drijft en is het de voet die een trap tegen de bal geeft. In deze voorbeelden oefent het ene voorwerp een kracht uit en ondergaat het andere voorwerp die kracht. Maar, is het zo eenzijdig \ldots? Het volgende voorbeeld geeft aan van niet. Het geeft aan dat er naast een `actie'kracht ook altijd een `reactie'kracht optreedt.
 
-\begin{example}
-	Meestal plooien vingers naar de handpalm toe. De praktijk leert dat het andersom toch iets moeilijker gaat, misschien vandaar. Als de andere hand echter wat helpt door te duwen (dus een kracht uitoefent op de vingers), plooien de vingers al iets verder naar achter; uit zichzelf geraken ze niet zo ver. Als je nu -- ter vergelijking -- met gestrekte vingers tegen de tafel duwt, plooien je vingers eveneens meer naar achteren dan dat ze uit zichzelf zouden kunnen. Omdat de vingers zonder een extern uitgeoefende kracht niet zo ver kunnen doorbuigen, valt te concluderen dat naast de kracht die door de vingers op de tafel wordt uitgeoefend, de tafel op zijn beurt een kracht uitoefent op de vingers.
-\end{example}
+Meestal plooien vingers naar de handpalm toe. De praktijk leert dat het andersom toch iets moeilijker gaat, misschien vandaar. Als de andere hand echter wat helpt door te duwen (dus een kracht uitoefent op de vingers), plooien de vingers al iets verder naar achter; uit zichzelf geraken ze niet zo ver. Als je nu -- ter vergelijking -- met gestrekte vingers tegen de tafel duwt, plooien je vingers eveneens meer naar achteren dan dat ze uit zichzelf zouden kunnen. Omdat de vingers zonder een extern uitgeoefende kracht niet zo ver kunnen doorbuigen, valt te concluderen dat naast de kracht die door de vingers op de tafel wordt uitgeoefend, de tafel op zijn beurt een kracht uitoefent op de vingers.
+
 
 % \begin{image}
 % % \begin{wrapfigure}{R}{0.5\textwidth}	
@@ -76,9 +75,22 @@ Met deze derde wet kunnen we verschillende verschijnselen verklaren. Hier volgen
 \end{exercise}
 
 \begin{exercise}
+	Je springt vanuit een roeibootje naar de oever. Verklaar wat er kan gebeuren als het roeibootje niet of wel vastgemeerd is. Wanneer je nu vanaf een groot binnenschip naar de oever springt, wat zou het resultaat dan zijn? Verklaar!
+	\begin{oplossing}
+		Bij een roeibootje dat niet vastgemeerd is, is er veel kans dat je in het water belandt. Bij het afzetten, schiet het bootje namelijk gemakkelijk onder je weg. Hoe komt dat? Wel, doordat je je afzet, oefen je een kracht uit op het bootje. De \textbf{derde wet van Newton} zegt dat het bootje dan een even grote kracht op jou uitoefent, in de tegengestelde richting. Het is die reactiekracht die je zou willen aanwenden om op de oever te geraken. De massa van het bootje is echter zo klein in vergelijking met jouw massa dat, volgens de \textbf{tweede wet van Newton} ($\vec{F}=m\vec{a}$), de versnelling die het bootje krijgt als gevolg van jouw actiekracht veel groter is dan de versnelling die je zelf krijgt door de afzet. In de korte tijd dat je jezelf kan afzetten, verwerft het bootje dus een grote snelheid waardoor het onder je wegschiet en krijg jij geen noemenswaardige snelheid opgebouwd.
+
+		Als het bootje is vastgemeerd, lukt het je wel de oever te bereiken. Het bootje kan immers niet wegschieten waardoor je je voldoende lang kan afzetten (er werkt voldoende lang een kracht op jou) en zo de nodige snelheid kan verwerven (je krijgt immers een versnelling) om de sprong te kunnen maken.
+
+		Voor een groot binnenschip is de massa zo groot in vergelijking met die van jou, dat het binnenschip een verwaarloosbare versnelling weg van de oever krijgt. Je kan een voldoende grote versnelling opbouwen die lang genoeg aanhoudt om je op de oever te krijgen.
+	\end{oplossing}
+\end{exercise}
+
+\begin{exercise}
 	Twee ploegen zijn aan het touwtrekken. Volgens het derde beginsel van Newton oefenen de twee ploegen steeds even grote maar tegengestelde krachten op elkaar uit. Hoe is het dan mogelijk dat er toch een winnende ploeg is?
 	\begin{oplossing}
-		\dots
+		Er is een winnende ploeg mogelijk omdat het samenstellen van krachten op elke ploeg afzonderlijk gebeurt. Het zijn niet de actie- en reactiekracht (derde wet van Newton) die worden samengesteld. 
+		
+		De winnende ploeg slaagt erin zich beter af te zetten dan de verliezende ploeg. Dat wil zeggen dat de reactiekracht van de kracht die ze op de grond uitoefenen (de weerstandskracht dus) groter is dan de kracht tussen de twee ploegen. De resulterende kracht van de weerstandskracht en de spankracht op de ploeg, zorgt volgens de tweede wet van Newton voor een versnelling; de ploeg komt in beweging. Voor de verliezende groep is dat net omgekeerd.
 	\end{oplossing}
 \end{exercise}
 
@@ -86,7 +98,7 @@ Met deze derde wet kunnen we verschillende verschijnselen verklaren. Hier volgen
 	Een eekhoorntje glijdt over een gladde tafel met een heleboel nootjes tussen zijn voorpoten. Wat zou het moeten doen om te verhinderen dat het van de tafel valt? Leg uit.
 	
 	\begin{oplossing}
-		\dots
+		Het eekhoorntje moet de noten \emph{voor} zich uit gooien. De reactiekracht van de kracht die de eekhoorn op de nootjes uitoefent, grijpt aan op de eekhoorn en is tegengesteld gericht. Die reactiekracht kan hem afremmen en hem verhinderen van de tafel te glijden.
 	\end{oplossing}
 \end{exercise}
 
