--- a/6dejaar/dynamica/nwtn_intro.tex
+++ b/6dejaar/dynamica/nwtn_intro.tex
@@ -1,5 +1,5 @@
 \documentclass{ximera}
-\input{../preamble}
+\input{../../preamble}
 
 \addPrintStyle{..}
 
@@ -9,8 +9,6 @@
     \xmsource\xmuitleg
 
 
-	Het onderdeel binnen de mechanica dat zich met het verklarende principe bezighoudt, is de dynamica. Tot nu toe hebben we in de kinematica enkel bewegingen beschreven. We willen die bewegingen nu ook fysisch verklaren. De drie beginselen van Newton vormen, samen met enkele krachten, de fundamenten waarop de klassieke mechanica is gebouwd. 
-
-	%%\newpage
+Het onderdeel binnen de mechanica dat zich met het verklarende principe bezighoudt, is de dynamica. Tot nu toe hebben we in de kinematica enkel bewegingen beschreven. We willen die bewegingen nu ook fysisch verklaren. De drie beginselen van Newton vormen, samen met enkele krachten, de fundamenten waarop de klassieke mechanica is gebouwd. 
 	
 \end{document}
