--- a/6dejaar/dynamica/nwtn_traagheid.tex
+++ b/6dejaar/dynamica/nwtn_traagheid.tex
@@ -1,76 +1,73 @@
 \documentclass{ximera}
-\input{../preamble}
+\input{../../preamble}
 
 \addPrintStyle{..}
 
 \begin{document}
 	\author{Bart Lambregs}
-	\xmtitle{Eerste beginsel van Newton: traagheid}{}
+	\xmtitle{De eerste wet van Newton}{}
     \xmsource\xmuitleg
+	
+Om een boek met een constante snelheid over de tafel te duwen, is een zekere kracht nodig. Met een smeermiddel tussen boek en tafel is al minder kracht nodig. In de praktijk geen wrijving realiseren is niet mogelijk maar duidelijk is dat hoe minder wrijving hoe minder kracht nodig is om het boek met een constante snelheid te laten bewegen. Eenmaal in beweging gebracht, nadert de benodigde kracht tot nul, en dat terwijl het boek met constante snelheid blijft bewegen.
 
-	
-	%%%\section{De wet van de traagheid}
-	
-	Op 22 oktober 1895 gebeurde er in het eindstation Gare Montparnasse -- Parijs, een ongeluk. De treinbestuurder was door het station gereden en pas 30 meter voorbij het einde van het spoor tot stilstand gekomen.
-	\begin{image}
-	\includegraphics[width=.8\textwidth]{Train_wreck_at_Montparnasse_1895}
-	\end{image}
-	\captionof{figure}{Gare Montparnasse. Parijs 1895}
-	
-	De figuur ademt de onvermijdelijke wet van de traagheid uit \ldots
-	%%%\newline
-	\begin{definition}
-	{\textbf{De wet van de traagheid}}
-	
-	Een voorwerp behoudt zijn toestand van rust of van eenparige rechtlijnige beweging, tenzij er een resulterende kracht op werkt.
-	\end{definition}
-	
-	
-	
-	Je zal zeggen dat je met die wet al vertrouwd bent. Maar zoals zo vaak, blijken we zonder het te beseffen niet zomaar alle consequenties in rekening te brengen. Onze ervaring uit het dagelijks leven
-	wil wel eens roet in het eten strooien. Zo zijn we vertrouwd met het feit dat
-	fietsen toch enige inspanning en dus kracht vergt. Zeker als de wind tegen zit.
-	We zouden dus kunnen aannemen dat -- willen we bewegen -- we steeds een kracht nodig
-	hebben en willen we harder bewegen, we een grotere kracht nodig hebben. Die kracht zou dan moeten dienen om om het streven naar de `natuurlijke' toestand van rust, tegen te gaan en de snelheid te onderhouden. Wat denk je, is dit niet in strijd met de wet van de traagheid \ldots?!\footnote{Als je tegen een topsnelheid van $300\rm\,km/h$ in de Thalys richting Parijs zit, voel je de zetel dan harder tegen jou duwen dan dat ze dat doet wanneer je nog stilstaat in Brussel-Zuid \ldots?}
-	
-	Laten we -- om deze misvatting te bestrijden -- een gedachte-experiment uitvoeren. We doen dus niks concreets -- enkel redeneren. Het is een gedachte-experiment van Galileo Galilei (1564-1642). Om het uit te voeren hebben we een speciale knikkerbaan nodig, eentje zonder wrijving.\footnote{Ik heb horen zeggen dat er lang geleden een klein winkeltje bestond dat dergelijke knikkerbanen verkocht. Doorheen de jaren is het adres echter verloren gegaan. Niemand weet meer waar het zich bevindt \ldots} Laten we ervan uitgaan dat we in het bezit zijn van zo'n uiterst zeldzame baan. Onderstaande figuur toont dan de situatie waarin we een knikker op een bepaalde hoogte aan de linkerkant loslaten. Omdat er geen wrijving is, zal -- omwille van behoud van energie -- de knikker op de andere helling tot eenzelfde hoogte rollen, daar momentaan stilvallen en vervolgens terugrollen.
-	\begin{image}
-	\includegraphics[width=.7\textwidth]{Afbeelding1}
-	%\captionof{figure}{Het knikkertje rolt tot op dezelfde hoogte}
-	
-	\end{image}
-	
-	Als we vervolgens de rechterhelling vlakker maken, zoals in onderstaande figuur, zal ons knikkertje ook nu tot dezelfde hoogte rollen. En dit ongeacht de grotere afstand. De energie-inhoud moet immers gelijk blijven.
-	\begin{image}
-	\includegraphics[width=.7\textwidth]{Afbeelding2}
-	\end{image}
-	
-	Als laatste stap in onze redenering, misleiden we ons knikkertje\footnote{Mag dat wel?}. Het knikkertje moet -- zo hebben we het hem verteld -- een tijdje horizontaal rollen om pas dan de rechterhelling te kunnen oprollen. Opnieuw tot dezelfde hoogte. Nu hebben we echter de rechterhelling oneindig ver weg gezet! Ons arm knikkertje zal dus blijven rollen (herinner u, er was geen wrijving) in de veronderstelling de helling ooit te zullen tegenkomen. 
-	\begin{image}
-	\includegraphics[width=.7\textwidth]{Afbeelding3}
-	\end{image}
-	Gedurende het rollen op het horizontale stuk is de knikker dus niet onderhevig aan een voorwaartse kracht!\footnote{Wie zou immers die kracht uitoefenen \ldots?!} De beweging moet niet worden `onderhouden'. 
-	
-	Uit ons gedachte-experiment kunnen we concluderen dat er een kracht nodig was om de knikker in beweging te brengen maar dat er \emph{geen} kracht nodig is om de beweging van de knikker op een rechte lijn en met een constante snelheid te onderhouden. Er is dus geen recht evenredig verband tussen kracht en snelheid \footnote{Moest je dat al denken.}. Kracht en snelheid kunnen zelfs tegengesteld zijn -- denk maar aan de wrijvingskracht die de beweging tegenwerkt.
-	
-	De tendens van lichamen om zich te verzetten tegen de verandering van beweging, noemen we \textit{inertie} of \textit{traagheid}. Hoe groter de massa, hoe meer een voorwerp zich verzet.
-	
-	\begin{image}
-	\includegraphics[width=0.8\textwidth]{Garfield_firstlaw}
-	\end{image}
-	
-	\begin{example}
-	Wanneer je met de fiets fietst, rechtdoor en met een constante snelheid, is de kracht die je voorwaarts uitoefent dan groter, kleiner of gelijk aan de weerstandskracht die achterwaarts is gericht? Is met andere woorden de resulterende kracht op jouw fiets naar voren gericht, nul of naar achteren gericht? 
-	%%%\newline
-	%%%\newline Het antwoord is dat de resulterende kracht is nul is! Moest er immers een resulterende kracht zijn, dan zou volgens de wet van de traagheid de toestand van eenparige rechtlijnige beweging niet kunnen worden behouden. 
-	Eenmaal in beweging, is er geen kracht meer nodig om de beweging te onderhouden. Je moet blijven trappen om een even grote kracht als de weerstandskracht te kunnen genereren. Natuurlijk, om in beweging te komen, heb je wel een netto kracht naar voor toe nodig. Bij het remmen is de resulterende kracht dan weer naar achteren gericht.
-	\end{example}
-	
-	%\vfill
-	
-	
-	%%%\newpage
-	
-	
-	
+Door aan te nemen dat er geen kracht nodig is om in beweging te blijven, valt deze opeenvolging van waarnemingen te verklaren.
+
+Deze aanname zit vervat in de eerste wet van Newton.
+
+\begin{definition}
+{\textbf{De eerste wet van Newton}}\nl
+
+Een voorwerp behoudt zijn toestand van rust of van eenparige rechtlijnige beweging, tenzij er een resulterende kracht op werkt.
+\end{definition}
+
+\begin{remark}{De eerste wet van Newton wordt ook wel de traagheidswet genoemd.}
+	De eigenschap dat een lichaam zijn rust of constante snelheid op een rechte lijn behoudt, wordt inertie of traagheid genoemd. Vandaar de alternatieve naam voor de wet.
+\end{remark}
+
+\begin{denkvraag*}{}
+	Als je tegen een van \SI{300}{km/h} in de Thalys richting Parijs zit, voel je de zetel dan harder tegen jou duwen dan dat ze dat doet wanneer je nog stilstaat in Brussel-Zuid \ldots?
+\end{denkvraag*}
+
+\begin{denkvraag*}{}
+	\begin{enumerate}
+		\item Hoe kunnen de broers Staf en Mathias Coppens in het filmpje gemaakt voor het programma Het Lichaam van Coppens blijven bewegen door de lucht terwijl de zetel toch niet meer duwt?
+		\item Waarom wrijven de broers bruine zeep op de plank?
+	\end{enumerate}
+
+	\begin{center}
+		\youtube{l-X8sG1JV6Q}
+	\end{center}
+
+\end{denkvraag*}
+
+\begin{exercise}
+	Wanneer je met de fiets fietst, rechtdoor en met een constante snelheid, is de kracht die je voorwaarts uitoefent dan
+	\begin{multipleChoice}
+		\choice{groter}
+		\choice{kleiner of}
+		\choice[correct]{gelijk}
+	\end{multipleChoice}
+	aan de weerstandskracht die achterwaarts is gericht? Is met andere woorden de resulterende kracht op jouw fiets naar voren gericht, nul of naar achteren gericht?
+	\begin{oplossing}
+		Het antwoord is dat de resulterende kracht is nul is! Moest er immers een resulterende kracht zijn, dan zou volgens de wet van de traagheid de toestand van eenparige rechtlijnige beweging niet kunnen worden behouden.
+	\end{oplossing}
+\end{exercise}
+
+\begin{exercise}
+	Als je plots remt met je fiets kan je over je stuur vliegen. Hoe komt dat?
+	\begin{oplossing}
+		Volgens de wet van de traagheid wil je je toestand van beweging voortzetten. Omdat de fiets slechts een beperkte kracht op jou kan uitoefenen, bestaat de kans dat die niet groot genoeg is om je tot stilstand te brengen.
+	\end{oplossing}
+\end{exercise}
+
 \end{document}
+
+
+
+% Op 22 oktober 1895 gebeurde er in het eindstation Gare Montparnasse -- Parijs, een ongeluk. De treinbestuurder was door het station gereden en pas 30 meter voorbij het einde van het spoor tot stilstand gekomen.
+% 	\begin{image}
+% 	\includegraphics[width=.8\textwidth]{Train_wreck_at_Montparnasse_1895}
+% 	\end{image}
+% 	\captionof{figure}{Gare Montparnasse. Parijs 1895}
+	
+% 	De figuur ademt de onvermijdelijke wet van de traagheid uit \ldots
