--- a/6dejaar/dynamica/nwtn_traagheid.tex
+++ b/6dejaar/dynamica/nwtn_traagheid.tex
@@ -25,7 +25,7 @@ Een voorwerp behoudt zijn toestand van rust of van eenparige rechtlijnige bewegi
 \end{remark}
 
 \begin{denkvraag*}{}
-	Als je tegen een van \SI{300}{km/h} in de Thalys richting Parijs zit, voel je de zetel dan harder tegen jou duwen dan dat ze dat doet wanneer je nog stilstaat in Brussel-Zuid \ldots?
+	Als je tegen een van \SI{300}{km/h} in de Thalys richting Parijs zit, voel je de zetel dan harder tegen jou duwen dan dat ze dat doet wanneer je nog stilstaat in Brussel-Zuid?
 \end{denkvraag*}
 
 \begin{denkvraag*}{}
