--- a/6dejaar/dynamica/nwtn_intro.tex
+++ b/6dejaar/dynamica/nwtn_intro.tex
@@ -9,6 +9,10 @@
     \xmsource\xmuitleg
 
 
-Het onderdeel binnen de mechanica dat zich met het verklarende principe bezighoudt, is de dynamica. Tot nu toe hebben we in de kinematica enkel bewegingen beschreven. We willen die bewegingen nu ook fysisch verklaren. De drie beginselen van Newton vormen, samen met enkele krachten, de fundamenten waarop de klassieke mechanica is gebouwd. 
-	
+In de voorgaande hoofdstukken hebben we in de kinematica enkel bewegingen beschreven, door o.a. de fysische grootheden positie, snelheid en versnelling te gebruiken. Nu willen we die bewegingen ook kunnen verklaren; waardoor bewegen voorwerpen en hoe doen ze dat, gegeven de oorzaken? In de dynamica wordt het concept kracht als oorzaak van beweging gegeven en geeft de tweede wet van Newton het verband tussen de kracht de beweging.
+
+De drie beginselen van Newton vormen, samen met enkele krachten, de fundamenten waarop de klassieke mechanica is gebouwd.
+
+We focussen hier op de dynamische uitwerking van een kracht, de statische laten we voornamelijk achterwege. Dat doen we door de lichamen te beschouwen als puntmassa's.
+
 \end{document}
