--- a/mechanica_local.tex
+++ b/mechanica_local.tex
@@ -64,9 +64,9 @@
 \part{De beginselen van Newton}
 
 \activitychapter{6dejaar/dynamica/nwtn_intro.tex}
-\activitychapter{6dejaar/dynamica/nwtn_traagheid.tex}
-\activitychapter{6dejaar/dynamica/nwtn_tweede_beginsel.tex}
-\activitychapter{6dejaar/dynamica/nwtn_derde_beginsel.tex}
+% \activitychapter{6dejaar/dynamica/nwtn_traagheid.tex}
+% \activitychapter{6dejaar/dynamica/nwtn_tweede_beginsel.tex}
+% \activitychapter{6dejaar/dynamica/nwtn_derde_beginsel.tex}
 % \activitychapter{6dejaar/dynamica/nwtn_oef.tex}
 % % \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
 % % \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
