--- a/mechanica_local.tex
+++ b/mechanica_local.tex
@@ -63,11 +63,13 @@
 
 \part{De beginselen van Newton}
 
-\activitychapter{6dejaar/dynamica/nwtn_intro.tex}
+% \activitychapter{6dejaar/dynamica/nwtn_intro.tex}
 % \activitychapter{6dejaar/dynamica/nwtn_traagheid.tex}
 % \activitychapter{6dejaar/dynamica/nwtn_tweede_beginsel.tex}
 % \activitychapter{6dejaar/dynamica/nwtn_derde_beginsel.tex}
-% \activitychapter{6dejaar/dynamica/nwtn_oef.tex}
+% \activitychapter{6dejaar/dynamica/nwtn_oef.tex} = te verwijderen ...
+\activitychapter{6dejaar/dynamica/nwtn_denkvragen.tex}
+\activitychapter{6dejaar/dynamica/nwtn_vraagstukken.tex}
 % % \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
 % % \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
