semester1.tex met denkvragen en vraagstukken newton

--- a/semester1.tex
+++ b/semester1.tex
@@ -67,7 +67,9 @@
 \activitychapter{6dejaar/dynamica/nwtn_traagheid.tex}
 \activitychapter{6dejaar/dynamica/nwtn_tweede_beginsel.tex}
 \activitychapter{6dejaar/dynamica/nwtn_derde_beginsel.tex}
-\activitychapter{6dejaar/dynamica/nwtn_oef.tex}
+%%%\activitychapter{6dejaar/dynamica/nwtn_oef.tex} = te verwijderen en te vervangen door denkvragen en vraagstukken
+\activitychapter{6dejaar/dynamica/nwtn_denkvragen.tex}
+\activitychapter{6dejaar/dynamica/nwtn_vraagstukken.tex}
 % \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
 % \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
